--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "image-webpack-loader": "^7.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-dev-server": "^3.11.2"
   },
   "eslintConfig": {
     "root": true,
