--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-cropper": "^0.5.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
