--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.0.1",
     "element-ui": "^2.15.0",
     "moment": "^2.29.1",
+    "screenfull": "^5.1.0",
     "vue": "^2.6.11",
     "vue-cropper": "^0.5.6",
     "vue-router": "^3.2.0",
